--- a/config/database.yml
+++ b/config/database.yml
@@ -4,8 +4,8 @@
 development:
   adapter: postgresql
   database: theodinproject
-  username: theodinproject
-  password: odin1234
+  username: 
+  password: 
   host: localhost
 
 # Warning: The database defined as "test" will be erased and
@@ -15,8 +15,8 @@ test: &test
   adapter: postgresql
   database: theodinproject_test
   pool: 5
-  username: theodinproject
-  password: odin1234
+  username: 
+  password: 
   host: localhost
 
 production:
