--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ before_script:
   - bundle install
   - psql -c 'create database theodinproject_test;' -U postgres
 script:
-  - bundle exec rake bundler:audit
+  - gem install bundler-audit
+  - bundle audit check --update --ignore CVE-2015-9284
   - RAILS_ENV=test bundle exec rails db:schema:load
   - bundle exec rspec
 deploy:
