--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.1",
     "jest": "^26.6.3",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-dev-server": "^3.11.0"
   },
   "jest": {
