Remove trailing comma

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,7 @@
   "rules": {
     "react/forbid-prop-types": 0,
     "jsx-a11y/no-autofocus": 0,
-    "react/function-component-definition": 0,
+    "react/function-component-definition": 0
   },
   "settings": {
     "import/resolver": {
